[package]
name = "cdlint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ariadne = { version = "0.4.0", features = ["auto-color"] }
chumsky = { version = "1.0.0-alpha.6", features = ["label", "serde"] }
clap = { version = "4.4.18", features = ["derive"] }
confique = { version = "0.2.5", default-features = false, features = ["toml"] }
indexmap = { version = "2.2.2", features = ["serde"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "env-filter",
    "std",
    "registry",
] }
