[package]
name = "cdlint"
authors = ["jieyouxu"]
version = "0.1.1"
edition = "2021"
repository = "https://github.com/jieyouxu/CDLint"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ariadne = { version = "0.4.0", features = ["auto-color"] }
chumsky = { version = "1.0.0-alpha.6", features = ["label", "serde"] }
clap = { version = "4.4.18", features = ["derive"] }
confique = { version = "0.2.5", default-features = false, features = ["toml"] }
indexmap = { version = "2.2.2", features = ["serde"]}
serde = { version = "1.0.196", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-subscriber = { version = "0.3.18", features = [
    "fmt",
    "env-filter",
    "std",
    "registry",
] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.10.0"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
